--- a/Exercise-01/01_Pengantar Praktikum.ipynb
+++ b/Exercise-01/01_Pengantar Praktikum.ipynb
@@ -21,13 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "#  <<<<< Klik button play di samping kiri untuk menjalankannya\n",
     "# Ketikkan print(\"Hello World\") di baris selanjutnya ↓↓↓\n",
-    "\n"
+    "print (\"Hello World\")"
    ]
   },
   {
@@ -40,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "# <<< Klik play untuk menjalankan kode di bawah\n",
     "print(str(input(\"Ketikkan Pesan: \")))"
@@ -102,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
