--- a/Exercise-03/03_Tipe Data Koleksi.ipynb
+++ b/Exercise-03/03_Tipe Data Koleksi.ipynb
@@ -26,12 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "#SOAL-1\n",
-    "#BUATLAH LIST KALIAN DISINI"
+    "#BUATLAH LIST KALIAN DISINI\n",
+    "biodata = [\"Izzananda Adimas Faza\", \"I0321051\", 18, \"Bekasi\", \"Menggambar\"]"
    ]
   },
   {
@@ -46,12 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIODATA\n",
+      "------------------------------\n",
+      "Nama\t: Izzananda Adimas Faza \n",
+      "Nim\t: I0321051 \n",
+      "Usia\t: 18 \n",
+      "Asal\t: Bekasi \n",
+      "Hobi\t: Menggambar\n"
+     ]
+    }
+   ],
    "source": [
     "#SOAL-2\n",
-    "#TULISKAN KEMBALI KODE DIATAS SESUAI DATA KALIAN MASING-MASING DISINI"
+    "#TULISKAN KEMBALI KODE DIATAS SESUAI DATA KALIAN MASING-MASING DISINI\n",
+    "print(\"BIODATA\\n------------------------------\\nNama\\t:\", biodata[0], \"\\nNim\\t:\", biodata[1],\n",
+    "        \"\\nUsia\\t:\", biodata[2], \"\\nAsal\\t:\", biodata[3], \"\\nHobi\\t:\", biodata[4])"
    ]
   },
   {
@@ -65,12 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Izzananda Adimas Faza', 'I0321051', 18, 'Bekasi', ['Menggambar', 'Editing', 'Game']]\n"
+     ]
+    }
+   ],
    "source": [
     "#SOAL-3\n",
-    "#TULISKAN KEMBALI KODE DIATAS SESUAI HOBI KALIAN DISINI"
+    "#TULISKAN KEMBALI KODE DIATAS SESUAI HOBI KALIAN DISINI\n",
+    "biodata[4] = [\"Menggambar\", \"Editing\", \"Game\"]\n",
+    "print(biodata)"
    ]
   },
   {
@@ -84,12 +111,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Izzananda Adimas Faza', 18, 'Bekasi', ['Menggambar', 'Editing', 'Game']]\n"
+     ]
+    }
+   ],
    "source": [
     "#SOAL-4\n",
-    "#KERJAKAN PUNYA KALIAN DISINI"
+    "#KERJAKAN PUNYA KALIAN DISINI\n",
+    "biodata.remove(\"I0321051\")\n",
+    "print(biodata)"
    ]
   },
   {
@@ -101,12 +138,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIODATA\n",
+      "------------------------------\n",
+      "Nama\t: Izzananda Adimas Faza \n",
+      "Usia\t: 18 \n",
+      "Asal\t: Bekasi \n",
+      "Hobi\t: Menggambar, Editing, Game\n"
+     ]
+    }
+   ],
    "source": [
     "#SOAL-5\n",
-    "#Kerjakan disini"
+    "#Kerjakan disini\n",
+    "print(\"BIODATA\\n------------------------------\\nNama\\t:\", biodata[0],\n",
+    "        \"\\nUsia\\t:\", biodata[1], \"\\nAsal\\t:\", biodata[2], \"\\nHobi\\t:\", biodata[3][0] + \n",
+    "        \", \" + biodata[3][1] + \", \" + biodata[3][2])"
    ]
   },
   {
@@ -127,24 +180,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nama Lengkap: Izzananda Adimas Faza\n",
+      "{'nama_depan': 'Izzananda', 'nama_belakang': 'Adimas Faza', 'usia': 18, 'kota_asal': 'Bekasi', 'hobi': 'Menggambar', 'prodi': 'Teknik Industri'}\n",
+      "{'nama_depan': 'Izzananda', 'nama_belakang': 'Adimas Faza', 'usia': 18, 'kota_asal': 'Bekasi', 'hobi': 'Game', 'prodi': 'Teknik Industri'}\n",
+      "{'nama_depan': 'Izzananda', 'nama_belakang': 'Adimas Faza', 'usia': 18, 'hobi': 'Game', 'prodi': 'Teknik Industri'}\n"
+     ]
+    }
+   ],
    "source": [
     "#SILAHKAN ISI CODE RUMPANG BERIKUT SESUAI KONDISI KALIAN\n",
-    "biodata = {'nama_depan':'___','nama_belakang':'___','usia':0,'kota_asal':'____','hobi':'___'}\n",
-    "print('Nama Lengkap: ' + biodata['___'] + ' ' + biodata['___'])\n",
+    "biodata = {'nama_depan':'Izzananda','nama_belakang':'Adimas Faza','usia':18,'kota_asal':'Bekasi','hobi':'Menggambar'}\n",
+    "print('Nama Lengkap: ' + biodata['nama_depan'] + ' ' + biodata['nama_belakang'])\n",
     "\n",
     "#MENAMBAHKAN KEY&VALUE \"PRODI\" dan \"HOBI\" MASING-MASING\n",
-    "biodata['____'] = '____'\n",
+    "biodata['prodi'] = 'Teknik Industri'\n",
     "print(biodata)\n",
     "\n",
     "#MENGUBAH VALUE PADA SEBUAH DICTIONARY\n",
-    "biodata['hobi'] = '____'\n",
+    "biodata['hobi'] = 'Game'\n",
     "print(biodata)\n",
     "\n",
     "#MENGHAPUS SALAH SATU KEY-VALUE PAIRS\n",
-    "___ biodata['kota_asal']\n",
+    "del biodata['kota_asal']\n",
     "print(biodata)\n",
     "\n",
     "\n",
