--- a/Exercise-04/04_Operators.ipynb
+++ b/Exercise-04/04_Operators.ipynb
@@ -407,12 +407,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a & b = 0\n",
+      "a | b = 14\n",
+      "~a = -11\n",
+      "a ^ b = 14\n"
+     ]
+    }
+   ],
    "source": [
     "# Kerjakan disini\n",
-    "\n",
+    "a = 10\n",
+    "b = 4\n",
+    "print('a & b =', a & b)\n",
+    "print('a | b =', a | b)\n",
+    "print('~a =', ~a)\n",
+    "print('a ^ b =', a ^ b)\n",
     "# Jangan hapus kode di bawah ini \n",
     "%reset -f"
    ]
@@ -435,11 +451,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anda dapat mendaftar di kursus.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Buat kode disini\n"
+    "#Buat kode disini\n",
+    "usia = int(input('Berapa usia Anda? '))\n",
+    "tes = str(input('Apakah Anda lulus tes substansi [Y/T]? '))\n",
+    "\n",
+    "if usia >= 21 and tes == 'Y' :\n",
+    "    print('Anda dapat mendaftar di kursus.')\n",
+    "else :\n",
+    "    print('Anda tidak dapat mendaftar di kursus.')\n"
    ]
   },
   {
