--- a/Exercise-04/04_Operators.ipynb
+++ b/Exercise-04/04_Operators.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -469,8 +469,10 @@
     "\n",
     "if usia >= 21 and tes == 'Y' :\n",
     "    print('Anda dapat mendaftar di kursus.')\n",
+    "elif not(tes == 'Y' or tes == 'T') :\n",
+    "    print('Terjadi kesalahan input. Mohon diperiksa kembali!')\n",
     "else :\n",
-    "    print('Anda tidak dapat mendaftar di kursus.')\n"
+    "    print('Anda tidak dapat mendaftar di kursus.')"
    ]
   },
   {
