--- a/Exercise-05/05_Percabangan.ipynb
+++ b/Exercise-05/05_Percabangan.ipynb
@@ -18,11 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51 adalah bilangan bulat positif\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "bilangan = int(input('Masukkan bilangan bulat: '))\n",
+    "if bilangan > 0 :\n",
+    "    print(bilangan, 'adalah bilangan bulat positif')"
    ]
   },
   {
@@ -39,11 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51 adalah bilangan ganjil\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "bilangan = int(input('Masukkan bilangan bulat: '))\n",
+    "if bilangan % 2 == 0 :\n",
+    "    print('%d adalah bilangan genap' % bilangan)\n",
+    "else :\n",
+    "    print('%d adalah bilangan ganjil' % bilangan)\n",
+    "print()"
    ]
   },
   {
@@ -60,11 +86,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Masukkan koordinat!\n",
+      "Koordinat (5,2) berada pada kuadran I\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "print('Masukkan koordinat!')\n",
+    "x = int(input('Masukkan nilai x: '))\n",
+    "y = int(input('Masukkan nilai y: '))\n",
+    "info ='Koordinat ('+ str(x) + \",\" + str(y) + ') berada pada kuadran '\n",
+    "if x>0 and y>0:\n",
+    "    print(info+\"I\")\n",
+    "elif x<0 and y>0:\n",
+    "    print(info+\"II\")\n",
+    "elif x<0 and y<0:\n",
+    "    print(info+\"III\")\n",
+    "elif x>0 and y<0:\n",
+    "    print(info+\"IV\")\n",
+    "else:\n",
+    "    pass\n",
+    "print()"
    ]
   },
   {
@@ -80,11 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anda dapat membuat KTP\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "usia = int(input(\"Umur: \"))\n",
+    "\n",
+    "if usia >= 17 :\n",
+    "    print(\"Anda dapat membuat KTP\")\n",
+    "else:\n",
+    "    print(\"Anda tidak dapat membuat KTP\")"
    ]
   },
   {
@@ -131,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
