--- a/Exercise-06/06_Perulangan.ipynb
+++ b/Exercise-06/06_Perulangan.ipynb
@@ -15,20 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Just face your fears and you become your hero\n",
+      "Just face your fears and you become your hero\n",
+      "Just face your fears and you become your hero\n",
+      "Just face your fears and you become your hero\n",
+      "Just face your fears and you become your hero\n",
+      "Just face your fears and you become your hero\n"
+     ]
+    }
+   ],
    "source": [
     "#menentukan banyak pengulangan\n",
-    "n = xx\n",
+    "n = 15\n",
     "\n",
     "#melakukan pengulangan\n",
-    "i = yy\n",
+    "i = 10\n",
     "\n",
-    "while i ___ n :\n",
-    "    print (\"...\")\n",
+    "while i <= n :\n",
+    "    print (\"Just face your fears and you become your hero\")\n",
     "    #diisi motto kalian\n",
-    "    i = i ___ 1 # sesuaikan dengan atas agar fungsi perulangan dapat berhenti\n"
+    "    i = i + 1 # sesuaikan dengan atas agar fungsi perulangan dapat berhenti\n"
    ]
   },
   {
@@ -42,11 +55,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "n = int(input('input nilai n: '))\n",
+    "i = 6\n",
+    "while i <= n :\n",
+    "    print(i)\n",
+    "    i = i + 1"
    ]
   },
   {
@@ -60,17 +95,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baris ke-15 : Just Because\n",
+      "Baris ke-14 : Just Because\n",
+      "Baris ke-13 : Just Because\n",
+      "Baris ke-12 : Just Because\n",
+      "Baris ke-11 : Just Because\n",
+      "Baris ke-10 : Just Because\n"
+     ]
+    }
+   ],
    "source": [
     "#melakukan pengulangan\n",
-    "i = xx\n",
+    "i = 15\n",
     "\n",
-    "while i ___ yy :\n",
-    "    print (\"Baris ke-%d : ....\"%i)\n",
+    "while i >= 10 :\n",
+    "    print (\"Baris ke-%d : Just Because\"%i)\n",
     "    #isi titik-titik dengan judul film favorit kalian\n",
-    "    i = i + 1 "
+    "    i = i - 1 "
    ]
   },
   {
@@ -86,15 +134,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Bubur kacang ijo Jakarta\n",
+      "2 Ayam geprek Solo\n",
+      "3 Lele bakar Bandung\n"
+     ]
+    }
+   ],
    "source": [
-    "list1 = [] #masukkan 7 list makanan favorit kalian\n",
-    "list2 = [] #masukkan 7 list kota favorit kalian\n",
+    "list1 = ['Bubur kacang ijo',\n",
+    "         'Ayam geprek',\n",
+    "         'Lele bakar',\n",
+    "         'Udang'\n",
+    "         'Cumi'\n",
+    "         'Indomie goreng',\n",
+    "         'Indomie goreng rendang'] #masukkan 7 list makanan favorit kalian\n",
+    "list2 = ['Jakarta',\n",
+    "         'Solo',\n",
+    "         'Bandung',\n",
+    "         'Bogor',\n",
+    "         'Yogyakarta',\n",
+    "         'Malang'] #masukkan 7 list kota favorit kalian\n",
     "\n",
-    "for i in range(___,___) :\n",
-    "    print(i+1, ___ , ___)"
+    "for i in range(0,3) :\n",
+    "    print(i+1, list1[i] , list2[i])"
    ]
   },
   {
@@ -108,18 +177,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "225 \n",
+      "210 196 \n",
+      "195 182 169 \n",
+      "180 168 156 144 \n",
+      "165 154 143 132 121 \n",
+      "150 140 130 120 110 100 \n"
+     ]
+    }
+   ],
    "source": [
-    "i = xx\n",
-    "while i ___ yy:\n",
-    "    j = xx\n",
-    "    ___ j<=i:\n",
+    "i = 15\n",
+    "while i >= 10:\n",
+    "    j = 15\n",
+    "    while j>=i:\n",
     "        print(\"%d \" % (i*j), end = '')\n",
-    "        j = j + 1\n",
+    "        j = j - 1\n",
     "    print()\n",
-    "    i+=1"
+    "    i-=1"
    ]
   },
   {
@@ -137,14 +219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "012345678910"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(pp):\n",
+    "for i in range(20):\n",
     "    print(i,end='')\n",
-    "    if i == qq:\n",
-    "        ___"
+    "    if i == 10:\n",
+    "        break"
    ]
   },
   {
