--- a/Exercise-07/07_Fungsi.ipynb
+++ b/Exercise-07/07_Fungsi.ipynb
@@ -88,9 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nama = Izzan\n",
+      "tahun = 2021\n",
+      "nama = Izzananda Adimas Faza\n",
+      "tahun = 21\n"
+     ]
+    }
+   ],
    "source": [
     "#Kerjakan disini\n",
     "nama = 'Izzan'\n",
@@ -119,11 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 2.0\n",
+      "y = 9.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "import math\n",
+    "def main():\n",
+    "    x = math.sqrt(4)\n",
+    "    y = math.sqrt(81)\n",
+    "    print('x =', x)\n",
+    "    print('y =', y)\n",
+    "main()"
    ]
   },
   {
@@ -139,11 +166,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "import time\n",
+    "def countdownTimer(start_minute,start_second):\n",
+    "    total_second = start_minute*60 + start_second\n",
+    "    while total_second:\n",
+    "        mins, secs = divmod(total_second, 60)\n",
+    "        print(f'{mins:02d}:{secs:02d}', end='\\r')\n",
+    "        time.sleep(1)\n",
+    "        total_second -= 1\n",
+    "def main():\n",
+    "    countdownTimer(0,15)\n",
+    "    print(\"Done!\")\n",
+    "\n",
+    "main()\n",
+    "\n"
    ]
   },
   {
@@ -158,11 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "def panggil(func):\n",
+    "    return func\n",
+    "def helloworld():\n",
+    "    return \"HELLO WORLD\"\n",
+    "def main():\n",
+    "    s = panggil(helloworld())\n",
+    "    print(s)\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -178,11 +244,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keadaan awal\n",
+      "['iz', 'Za', 'Nan', 'da']\n",
+      "\n",
+      "Menggunakan sorted():\n",
+      "['Nan', 'Za', 'da', 'iz']\n",
+      "\n",
+      "Keadaan akhir:\n",
+      "['da', 'iz', 'Nan', 'Za']\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "def main():\n",
+    "    daftarnama = ['iz','Za', 'Nan','da']\n",
+    "    print('Keadaan awal')\n",
+    "    print(daftarnama)\n",
+    "\n",
+    "    print('\\nMenggunakan sorted():')\n",
+    "    print(sorted(daftarnama))\n",
+    "\n",
+    "    daftarnama.sort(key=lambda n: n.lower())\n",
+    "\n",
+    "    print('\\nKeadaan akhir:')\n",
+    "    print(daftarnama)\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -198,11 +293,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15! = 1307674368000\n"
+     ]
+    }
+   ],
    "source": [
-    "#Kerjakan disini\n"
+    "#Kerjakan disini\n",
+    "import sys\n",
+    "\n",
+    "def faktorial(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*faktorial(n-1)\n",
+    "\n",
+    "def main():\n",
+    "    bil = int(input(\"Masukkan bilangan = \"))\n",
+    "    \n",
+    "    if bil < 0:\n",
+    "        print('ERROR')\n",
+    "        sys.exit(1)\n",
+    "    \n",
+    "    print(\"%d! = %d\" %(bil, faktorial(bil)))\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -214,6 +336,45 @@
     "- Data awal berupa list bulan Januari - Desember dengan huruf awal bervariasi (huruf kapital dan kecil)\n",
     "- Urutkan nama menggunakan **sorted()**\n",
     "- Kemudian urutkan nama sesuai abjad tanpa mepedulikan huruf awal (huruf kapital atau huruf kecil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data awal:\n",
+      "['January', 'February', 'march', 'April', 'may', 'june', 'july', 'August', 'September', 'october', 'November', 'december']\n",
+      "\n",
+      "Menggunakan sorted:\n",
+      "['April', 'August', 'February', 'January', 'November', 'September', 'december', 'july', 'june', 'march', 'may', 'october']\n",
+      "\n",
+      "Dengan bantuan lambda:\n",
+      "['April', 'August', 'december', 'February', 'January', 'july', 'june', 'march', 'may', 'November', 'october', 'September']\n"
+     ]
+    }
+   ],
+   "source": [
+    "month =['January',\n",
+    "        'February',\n",
+    "        'march',\n",
+    "        'April',\n",
+    "        'may',\n",
+    "        'june',\n",
+    "        'july',\n",
+    "        'August',\n",
+    "        'September',\n",
+    "        'october',\n",
+    "        'November',\n",
+    "        'december']\n",
+    "print('Data awal:\\n%s' %month)\n",
+    "print('\\nMenggunakan sorted:\\n%s' %sorted(month))\n",
+    "month.sort(key=lambda n: n.lower())\n",
+    "print('\\nDengan bantuan lambda:\\n%s' %(month))"
    ]
   },
   {
