--- a/Exercise-12/12 Penanganan Eksepsi Exercise.ipynb
+++ b/Exercise-12/12 Penanganan Eksepsi Exercise.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -46,11 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teknik\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "try:\n",
+    "    x = 'teknik'\n",
+    "    print(x)\n",
+    "except:\n",
+    "    print('An exception occured')"
    ]
   },
   {
@@ -64,11 +77,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anda mengetikkan \"sesuatu\"\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "try:\n",
+    "    teks = input('Ketikkan sesuatu: ')\n",
+    "except EOFError:\n",
+    "    print ('\\nKenapa sudah EOF?')\n",
+    "except KeyboardInterrupt:\n",
+    "    print ('\\Anda membatalkan operasi')\n",
+    "else:\n",
+    "    print ('Anda mengetikkan \"%s\"' %teks)"
    ]
   },
   {
@@ -82,11 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anda mengetikkan \"itu\"\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "try:\n",
+    "    teks = input('Ketikkan sesuatu: ')\n",
+    "except EOFError:\n",
+    "    print ('\\nKenapa sudah EOF?')\n",
+    "except KeyboardInterrupt:\n",
+    "    print ('\\Anda membatalkan operasi')\n",
+    "else:\n",
+    "    print ('Anda mengetikkan \"%s\"' %teks)"
    ]
   },
   {
@@ -100,11 +145,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "File ditutup.\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "import time\n",
+    "\n",
+    "try:\n",
+    "    f = open('coba.txt')\n",
+    "    while True:\n",
+    "        baris = f.readline()\n",
+    "        if len(baris) == 0:\n",
+    "            break\n",
+    "        print(baris)\n",
+    "        time.sleep(2)\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"\\nAnda membatalkan operasi\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"\\nFile tidak ditemukan.\")\n",
+    "except NameError:\n",
+    "    print('\"f\" tidak terdefinisi')\n",
+    "finally:\n",
+    "    f.close()\n",
+    "    print(\"\\nFile ditutup.\")"
    ]
   },
   {
